# party-parrot

./: README.md  pyproject.toml  state.json
parrot/: __init__.py  gl_window_app.py  main.py
parrot/api/: web_server.py
parrot/director/: director.py
parrot/utils/: dmx_utils.py  overlay_ui.py
parrot/vj/: vj_director.py
parrot/vj/nodes/: fixture_visualization.py
