[tool.poetry]
name = "party-parrot"
version = "0.1.0"
description = ""
authors = ["David Mack"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyAudio = "*"
DMXEnttecPro = "^0.4"
matplotlib = "^3.9.1"
numpy = "^1.24.0"
scipy = "^1.2.0"
events = "^0.5"
tk = "^0.1.0"
black = "^24.4.2"
pyenttec = "^1.4"
flask = "^3.1.0"
colorama = "^0.4.6"
pytest = "^8.3.5"
beartype = "^0.19.0"
moderngl = "^5.11.1"
moderngl-window = "^2.4.4"
opencv-python = "^4.10.0"
pygame = "^2.6.1"
pyopengl-accelerate = "^3.1.10"
pyopengl = "^3.1.10"
pillow = "^11.3.0"
imgui = {extras = ["pyglet"], version = "^2.0.0"}
pyobjc-framework-cocoa = { version = "^11.1", markers = "sys_platform == 'darwin'" }
stupidartnet = "^1.4.0"
setuptools = "^80.0.0"
packaging = "^25.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.18.1"
coverage = "^7.10.6"
ipykernel = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
